<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Shutters" Id="{b02ba6ca-0869-4eb6-bcec-342502b1ac4f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

    {attribute 'TcLinkTo' := '
        .bOpenRequest	:=	TIID^EtherCAT1^EK1100_04_00^EL2624_04_01^Channel 1^Output;
        .bOpenStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 1^Input;
        .bCloseStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 2^Input;
        .bLssStatus		:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_04^Channel 1^Input;
    '}
    {attribute 'pytmc' := 'pv: LTLHN:LS1:LST'}
    fbLS1 : ST_ShutterControl;

    {attribute 'TcLinkTo' := '
        .bOpenRequest	:=	TIID^EtherCAT1^EK1100_04_00^EL2624_04_01^Channel 3^Output;
        .bOpenStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_03^Channel 1^Input;
        .bCloseStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_03^Channel 2^Input;
        .bLssStatus		:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_04^Channel 3^Input;
    '}
    {attribute 'pytmc' := 'pv: LTLHN:LS5:LST'}
    fbLS5 : ST_ShutterControl;

    {attribute 'TcLinkTo' := '
        .bOpenRequest	:=	TIID^EtherCAT1^EK1100_04_00^EL2624_04_01^Channel 4^Output;
        .bOpenStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_03^Channel 3^Input;
        .bCloseStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_03^Channel 4^Input;
        .bLssStatus		:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_04^Channel 4^Input;
    '}
    {attribute 'pytmc' := 'pv: LTLHN:LS8:LST'}
    fbLS8 : ST_ShutterControl;
// Shutter controls for 1um Line upgrades
(*
{attribute 'TcLinkTo' := '
        .bOpenRequest	:=	TIID^EtherCAT1^EK1100_04_00^EL2624_04_01^Channel 1^Output;
        .bOpenStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 1^Input;
        .bCloseStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 2^Input;
        .bLssStatus		:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_04^Channel 1^Input;
    '}
    {attribute 'pytmc' := 'pv: LTLHN:LS3:LST'}
    fbLS3 : ST_ShutterControl;
{attribute 'TcLinkTo' := '
        .bOpenRequest	:=	TIID^EtherCAT1^EK1100_04_00^EL2624_04_01^Channel 1^Output;
        .bOpenStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 1^Input;
        .bCloseStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 2^Input;
        .bLssStatus		:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_04^Channel 1^Input;
    '}
    {attribute 'pytmc' := 'pv: LTLHN:LS4:LST'}
    fbLS4 : ST_ShutterControl;
{attribute 'TcLinkTo' := '
        .bOpenRequest	:=	TIID^EtherCAT1^EK1100_04_00^EL2624_04_01^Channel 1^Output;
        .bOpenStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 1^Input;
        .bCloseStatus	:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_02^Channel 2^Input;
        .bLssStatus		:=	TIID^EtherCAT1^EK1100_04_00^EL1004_04_04^Channel 1^Input;
    '}
    {attribute 'pytmc' := 'pv: LTLHN:LS6:LST'}
    fbLS6 : ST_ShutterControl;
*)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>